tests/error/number_literal.lua
-- ok
n = 1

-- ok
n = 2.7

-- ok
n = 0x1.3e-0xa

-- ok
n = 0xABCp-10

-- error
n = 0xFp0x21
